Added note about how to create a custom banner image for the header

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,9 @@ textarea,
 .preview-body{
   font-family: "Muli", Helvetica, sans-serif;
 }
+p.smallerText{
+  font-size: 11px;
+}
 
 /* Component styles */
 
