--- a/css/styles.css
+++ b/css/styles.css
@@ -3,16 +3,6 @@ body {
     height: 100%
 }
 
-.editable h1,
-.editable h2,
-.editable h3,
-.editable h4,
-.editable h5,
-.editable p {
-    margin: 0;
-    margin-bottom: 5px;
-}
-
 
 /* TinyMCE Styles */
 
@@ -22,6 +12,25 @@ body {
 
 .mce-content-body:focus {
     outline: none;
+}
+
+.tox-tinymce-inline,
+.tox-tinymce-inline .tox-editor-header {
+    border-radius: 10px !important;
+}
+
+.tox-tinymce-inline .tox-editor-header {
+    opacity: 0.95;
+}
+
+.editable h1,
+.editable h2,
+.editable h3,
+.editable h4,
+.editable h5,
+.editable p {
+    margin: 0;
+    margin-bottom: 5px;
 }
 
 
