--- a/css/styles.css
+++ b/css/styles.css
@@ -368,7 +368,7 @@ p.smallerText {
     /* box-shadow: 0 1px 4px 1px rgba(0,0,0,.14); */
     box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.25);
     border: 1px solid #e3e3e3;
-    padding: 15px;
+    padding: 15px 10px;
     margin: 5px;
     position: relative;
 }
