Added class to post's image to prevent CSS overriding

--- a/css/styles.css
+++ b/css/styles.css
@@ -997,7 +997,7 @@ input[type="color"].postColorSelector:focus {
     flex-flow: column nowrap;
 }
 
-.post img {
+.post .post-img {
     width: 124px;
     height: auto;
     object-fit: cover;
