--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ body {
 }
 .snotify.snotify-centerCenter .snotifyToast{
     background: linear-gradient(0.5turn, #06874e, #00a758);
+    box-shadow: 0 0 15px #1a1a1a;
 }
 .snotify.snotify-centerCenter .snotifyToast__title,
 .snotify.snotify-centerCenter .snotifyToast__body{
