--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,9 @@ body {
 .tox-toolbar-overlord .tox-toolbar:first-child {
     border-radius: 10px 10px 0 0;
 }
+.tox .tox-toolbar__group {
+    padding: 0 10px 0 10px !important;
+}
 
 .tox-toolbar-overlord .tox-toolbar:last-child {
     border-radius: 0 0 10px 10px;
